mobile bug on safari fixed

--- a/app/public/css/style.scss
+++ b/app/public/css/style.scss
@@ -1755,8 +1755,7 @@ button.red-outline-animated {
       }
     }
     img {
-      position: absolute;
-      top: 32%;
+      display: none;
     }
   }
   .arrow-down {
